[package]
name = "regu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "2.0.4"
http = "1.1.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "net", "io-std", "io-util", "macros"] }
tower = "0.4.13"
