[package]
name = "regu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "2.0.4"
http = "1.1.0"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["http1", "client", "server"] }
hyper-util = { version = "0.1.4", features = ["tokio", "service", "client", "http1"] }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "net", "io-std", "io-util", "macros", "sync"] }
tower = "0.4.13"
